--- a/graphics_designingService.html
+++ b/graphics_designingService.html
@@ -150,10 +150,10 @@
         <div class="page-info">
             <div class="auto-container">
             	<div class="inner-container">
-                    <ul class="bread-crumb">
+                    <!-- <ul class="bread-crumb">
                         <li><a href="index.html">Home</a></li>
                         <li>Graphics Designing</li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -205,13 +205,13 @@
                         </div>
                         
                         <!-- Sidebar brochure-->
-                        <div class="sidebar-widget sidebar-brochure">
+                        <!-- <div class="sidebar-widget sidebar-brochure">
                         	<div class="sidebar-title">
                                 <h2>Our Brochures</h2>
                             </div>
                         	<a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview <span>Download.pdf</span></a>
                             <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our Company <span>Download.doc</span></a>
-                        </div>
+                        </div> -->
                         
                         <!-- Sidebar brochure-->
                         <div class="sidebar-widget testimonial-widget">
@@ -481,7 +481,7 @@
                                         </div>
                                         <div class="form-group">
                                             <select class="custom-select-box">
-                                                <option>Software Development</option>
+                                                <option>Select Course</option>
                                                 <option>Website Development</option>
                                                 <option>Digital Marketing</option>
                                                 <option>App Development</option>
