--- a/fullstack_developmentService.html
+++ b/fullstack_developmentService.html
@@ -151,10 +151,10 @@
             <div class="page-info">
                 <div class="auto-container">
                     <div class="inner-container">
-                        <ul class="bread-crumb">
+                        <!-- <ul class="bread-crumb">
                             <li><a href="index.html">Home</a></li>
                             <li>Full Stack Development</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
+                            <!-- <div class="sidebar-widget sidebar-brochure">
                                 <div class="sidebar-title">
                                     <h2>Our Brochures</h2>
                                 </div>
@@ -214,7 +214,7 @@
                                     <span>Download.pdf</span></a>
                                 <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
                                     Company <span>Download.doc</span></a>
-                            </div>
+                            </div> -->
 
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
@@ -775,7 +775,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <select class="custom-select-box">
-                                                        <option>Software Development</option>
+                                                        <option>Select Course</option>
                                                         <option>Website Development</option>
                                                         <option>Digital Marketing</option>
                                                         <option>App Development</option>
