--- a/header.html
+++ b/header.html
@@ -34,8 +34,8 @@
                             <!--Language-->
                             <li><a href="mailto:http://info@technoartz.com"><span
                                         class="icon fa fa-envelope"></span>info@technoartz.com</a></li>
-                            <li><a href="tel:http://+91%208888804265"><span class="icon fa fa-phone"></span><strong>+91
-                                        8888804265</strong> </a></li>
+                            <li><a href="tel:http://+918888804265"><span class="icon fa fa-phone"></span><strong>
+                                        +918888804265</strong> </a></li>
 
                         </ul>
                     </div>
@@ -71,7 +71,7 @@
                 <div class="outer-container clearfix">
                     <!--Logo Box-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/T_logo.png" alt=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/tlogo.jpg" alt=""></a></div>
                     </div>
 
                     <!--Nav Outer-->
@@ -97,7 +97,7 @@
                                         <ul>
                                             <!-- <li><a href="software_development.html">Software Development</a></li> -->
                                             <li><a href="full-stack_development.html">Web Development</a></li>
-                                            <li><a href="digital_marketing.html">Digital Marketing</a></li>
+                                            <li><a href="digital_marketingService.html">Digital Marketing</a></li>
 
                                             <!-- <li><a href="mobile-application.html">Mobile Application</a></li> -->
                                             <li><a href="graphics_designing.html">Graphics Designing</a></li>
@@ -119,8 +119,9 @@
 
                         <!--Outer Box-->
                         <div class="outer-box">
-                            <a href="contact.html" class="theme-btn btn-style-one"> <span
-                                    class="icon flaticon-right-arrow-1"></span>Call Now</a>
+                            <a href="tel:+918888804265" class="theme-btn btn-style-one">
+                                <span class="icon flaticon-right-arrow-1"></span>Call Now
+                            </a>
                         </div>
 
                     </div>
@@ -134,24 +135,26 @@
     </header>
 
 
-
     <div id="sy-whatshelp">
         <div class="sywh-services">
-          <!-- <a href="" class="messenger" data-tooltip="Livechat" data-placement="left" target="_blank">
-            <i class="fa fa-comments"></i>
-          </a> -->
-          <a href="https://web.whatsapp.com/" class="whatsapp"  data-placement="left" target="_blank">
-            <i class="fa fa-whatsapp"></i>
-          </a>
-          <a href="tel:http://+91%208888804265" class="call"  data-placement="left">
-            <i class="fa fa-phone"></i>
-          </a>
+            <!-- <a href="" class="messenger" data-tooltip="Livechat" data-placement="left" target="_blank">
+                <i class="fa fa-comments"></i>
+            </a> -->
+            <!-- Correct WhatsApp Link -->
+            <a href="https://wa.me/918888804265" class="whatsapp" data-placement="left" target="_blank">
+                <i class="fa fa-whatsapp"></i>
+            </a>
+            <!-- Correct Telephone Link -->
+            <a href="tel:+918888804265" class="call" data-placement="left">
+                <i class="fa fa-phone"></i>
+            </a>
         </div>
         <a class="sywh-open-services" data-placement="left">
-                      <i class="fa fa-comments"></i>
-          <i class="fa fa-times"></i>
+            <i class="fa fa-comments"></i>
+            <i class="fa fa-times"></i>
         </a>
-      </div>
+    </div>
+    
 </body>
 
 </html>
