--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 data-textalign="['top','top','top','top']"
                                 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
                                 <div class="btns-box">
-                                    <a href="website_development.html" class="theme-btn btn-style-one"> <span
+                                    <a href="full-stack_development.html" class="theme-btn btn-style-one"> <span
                                             class="icon flaticon-right-arrow-1"></span> Read More</a>
                                 </div>
                             </div>
@@ -384,7 +384,7 @@
                             <h3>Web Development</h3>
                             <div class="text">It involves building creativity with UI/UX and maintaining the websites...
                             </div>
-                            <a href="website_development.html" class="read-more"><span
+                            <a href="full-stack_development.html" class="read-more"><span
                                     class="icon flaticon-right-arrow-1"></span> Read More</a>
                         </div>
                     </div>
@@ -411,7 +411,7 @@
                             <h3>Graphics Designing</h3>
                             <div class="text">It is the act of design and developing app suitable for all mobile
                                 devices...</div>
-                            <a href="mobile-application.html" class="read-more"><span
+                            <a href="graphics_designing.html" class="read-more"><span
                                     class="icon flaticon-right-arrow-1"></span> Read More</a>
                         </div>
                     </div>
@@ -594,7 +594,7 @@
         <!--End Featured Section Two-->
 
         <!--Marketing Section-->
-        <!-- <section class="marketing-section">
+        <section class="marketing-section">
             <div class="auto-container">
                 <div class="row clearfix">
 
@@ -728,7 +728,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section> 
         <!--End Marketing Section-->
 
         <!-- <section class="we-are-section">
@@ -1038,6 +1038,38 @@
                                             <div class="inner-box">
                                                 <div class="client-img">
                                                     <img src="images/SS7.jpg" alt="SSS7" />
+                                                </div>
+                                                <div class="text"> SS7 sports is a sports technology company with brands
+                                                    such as MyBatting11 in its portfolio.</div>
+                                                <a class="read-more" href="https://ss7sports.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="testimonial-block">
+                                <div class="inner-box">
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/i2ilogo1.jpg" alt="Espark Tech" />
+                                                </div>
+                                                <div class="text"> We are a passionate Product Architecture from Pune.
+                                                </div>
+                                                <a class="read-more" href="https://www.i2ispecialist.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--Column-->
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/nvlogo.jpg" alt="SSS7" />
                                                 </div>
                                                 <div class="text"> SS7 sports is a sports technology company with brands
                                                     such as MyBatting11 in its portfolio.</div>
