--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -198,27 +198,16 @@
                             <!--Blog Category Widget-->
                             <div class="sidebar-widget sidebar-blog-category">
                                 <ul class="blog-cat-two">
-                                    <li><a>HTML</a></li>
-                                    <li><a>CSS</a></li>
-                                    <li><a>Bootstrap</a></li>
-                                    <li><a>Javascript</a></li>
+                                    <li><a>Search Engine Optimization (SEO)</a></li>
+                                    <li><a>Social Media Marketing</a></li>
+                                    <li><a>Content Marketing</a></li>
+                                    <li><a>Email Marketing</a></li>
                                     <!-- <li><a href="#"></a></li>
                                     <li><a href="#"></a></li> -->
                                 </ul>
                             </div>
 
-                            <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
-
-                            <!-- Sidebar brochure-->
+                     
                             <div class="sidebar-widget testimonial-widget">
                                 <div class="sidebar-title">
                                     <h2>Testimonials</h2>
@@ -229,14 +218,15 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Poonam Gore</h3>
+                                                    <div class="location"> Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">Working as a Digital Marketer is immensely gratifying, as it allows me to utilize my skills in social media and content creation. This role inspires me to experiment with new approaches, enhancing my passion for marketing and boosting my analytical abilities.
+
+                                                .</div>
                                         </div>
                                     </div>
 
@@ -245,14 +235,13 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Komal Kokare</h3>
+                                                    <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">As a Digital Marketer, I find my role engaging, allowing me to design compelling content and optimize online presence. This position encourages continuous learning, fueling my passion for digital strategies while refining my analytical and creative problem-solving capabilities.</div>
                                         </div>
                                     </div>
 
@@ -261,14 +250,44 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Aparna Magar</h3>
+                                                    <div class="location"> Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">In my role as a Digital Marketer, I derive great fulfillment from crafting targeted campaigns that resonate with audiences. This position empowers me to analyze data effectively, igniting my passion for marketing while enhancing my strategic thinking and problem-solving skills</div>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                    </div>
+                                                    <h3> Diksha Daphal</h3>
+                                                    <div class="location"> Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">Being a Digital Marketer is deeply satisfying, as I leverage my creativity to develop innovative strategies and drive brand awareness. This position motivates me to explore new tools, fueling my enthusiasm for marketing while sharpening my data-driven decision-making abilities..</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                    </div>
+                                                    <h3> Kavita Randive</h3>
+                                                    <div class="location"> Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">As a Digital Marketer, I find my work incredibly rewarding, enabling me to create impactful campaigns and engage audiences effectively. This role inspires me to stay updated with industry trends, fueling my passion for marketing while enhancing my analytical skills..</div>
                                         </div>
                                     </div>
                                 </div>
