--- a/java-developerjob.html
+++ b/java-developerjob.html
@@ -198,27 +198,17 @@
                             <!--Blog Category Widget-->
                             <div class="sidebar-widget sidebar-blog-category">
                                 <ul class="blog-cat-two">
-                                    <li><a>HTML</a></li>
-                                    <li><a>CSS</a></li>
-                                    <li><a>Bootstrap</a></li>
-                                    <li><a>Javascript</a></li>
+                                    <li><a>API Development and Integration</a></li>
+                                    <li><a>Microservices Architecture</a></li>
+                                    <li><a>MVC Architecture Development</a></li>
+                                    <li><a>RESTful API Development</a></li>
                                     <!-- <li><a href="#"></a></li>
                                     <li><a href="#"></a></li> -->
                                 </ul>
                             </div>
 
-                            <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
+                 
 
-                            <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
                                 <div class="sidebar-title">
                                     <h2>Testimonials</h2>
@@ -229,14 +219,13 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Poonam Gore</h3>
+                                                    <div class="location"> Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">As a Java Developer, I find my role fulfilling, allowing me to craft innovative applications and robust backend systems. This position inspires me to explore new technologies, fueling my passion for coding while enhancing my analytical and problem-solving skills.</div>
                                         </div>
                                     </div>
 
@@ -245,14 +234,13 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Komal Kokare </h3>
+                                                    <div class="location">Pune </div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">As a Java Developer, I find my work incredibly rewarding, allowing me to leverage my expertise in building robust applications and scalable systems. This role fosters innovation and enhances my coding skills while refining my analytical and problem-solving abilities.</div>
                                         </div>
                                     </div>
 
@@ -261,16 +249,48 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
+                                                    <h3>Aparna Magar</h3>
                                                     <div class="location">Newyork City</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">Being a Java Developer is immensely gratifying, as I utilize my skills to design efficient backend solutions and dynamic applications. This position encourages creativity and continuous improvement, deepening my passion for programming while honing my analytical and critical thinking skills..</div>
                                         </div>
                                     </div>
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials//diksha.jpeg" alt="" />
+                                                    </div>
+                                                    <h3>Diksha Daphal</h3>
+                                                    <div class="location"> Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">As a Java Developer, I derive immense satisfaction from developing secure and scalable applications. This role enables me to apply my technical skills while constantly improving processes, igniting my passion for programming and sharpening my analytical and problem-solving expertise.</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/kavii.jpeg alt="" />
+                                                    </div>
+                                                    <h3>Kavita Randive</h3>
+                                                    <div class="location"> Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">In my role as a Java Developer, I find great fulfillment in creating high-performance applications and reliable backend systems. This position empowers me to innovate and streamline processes, fueling my enthusiasm for coding and enhancing my problem-solving capabilities.</div>
+                                        </div>
+                                    </div>
+                                 
+
+
                                 </div>
                             </div>
 
