--- a/ui-developer.html
+++ b/ui-developer.html
@@ -208,15 +208,7 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
+                       
 
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
@@ -229,14 +221,20 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Poonam Gore</h3>
+                                                    <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">""I am excited to join Technoarts as part of their talented team. The company's innovative and forward-thinking approach aligns perfectly with my passion for technology. I look forward to contributing to impactful projects and growing my skills in this dynamic environment."
+
+
+
+
+
+
+                                                ."</div>
                                         </div>
                                     </div>
 
@@ -245,14 +243,32 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Komal Kokare</h3>
+                                                    <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">
+                                                "I’m excited to join Technoarts and be part of their talented team. The company's progressive vision perfectly matches my passion for technology. I look forward to contributing to impactful projects and developing my skills in this innovative environment."</div>
+                                        </div>
+                                    </div>
+
+
+
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                    </div>
+                                                    <h3>Aparna Magar</h3>
+                                                    <div class="location">Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">"As a UI Developer, I’m thrilled to join Technoarts and work with their talented team. The company’s forward-thinking vision aligns with my passion for technology, and I’m eager to contribute to meaningful projects while enhancing my skills."</div>
                                         </div>
                                     </div>
 
@@ -261,16 +277,34 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Diksha Daphal</h3>
+                                                    <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">"I’ve joined Technoarts as a UI Developer and am excited to work with their talented team. I’m eager to contribute to innovative projects and enhance my design skills in this dynamic environment, while aligning with the company's forward-thinking vision."</div>
                                         </div>
                                     </div>
+
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                    </div>
+                                                    <h3>Kavita Randive</h3>
+                                                    <div class="location">Pune</div>
+                                                </div>
+                                            </div>
+                                            <div class="text">"I’m thrilled to be part of Technoarts as a UI Developer and to work alongside a talented team. I am eager to contribute to creative projects and develop my design skills in this dynamic environment that embraces innovation."</div>
+                                        </div>
+                                    </div>
+
+
+
                                 </div>
                             </div>
 
