--- a/contact.html
+++ b/contact.html
@@ -242,7 +242,7 @@
                                             <div class="emailed"><span>Mail at:</span> info@technoartz.com</div>
                                         </div>
                                     </div> -->
-                                    <div class="office-info">
+                                    <!-- <div class="office-info">
                                         <ul>
                                             <li><strong>Development Wing:</strong></li>
                                             <li>A/11A, 6th Floor, City-Vista, Fountain Road, Kharadi Pune 411014
@@ -265,7 +265,7 @@
                                                 width="300" height="200" style="border:0;" allowfullscreen=""
                                                 loading="lazy"></iframe>
                                         </ul>
-                                    </div>
+                                    </div> -->
 
 
                                     <!-- <div class="info-slide">
@@ -296,7 +296,7 @@
                             <div class="lower-box">
                                 <ul class="info-list">
                                     <li><span class="icon"><img src="images/icons/address-icon.png" alt="" /></span>
-                                        <strong>Address:</strong> B/461, Adinath Nagar, Shirur Pune 412210
+                                        <strong>Address:</strong> City Vista Kolte Patil Downtown, Fountain Road, Kharadi, Pune, Maharashtra 411014
                                     </li>
                                     <li><span class="icon"><img src="images/icons/phone-icon.png" alt="" /></span>
                                         <strong>Call Us:</strong><br> +91 8888804265
@@ -318,10 +318,12 @@
         <!--Map Section-->
         <div class="container">
             <section class="map-section">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.282409300322!2d73.94253581393393!3d18.561302472773875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3dbcbd5f12f%3A0xcd7dd569ee6edd06!2sNMIMS%20KHARADI!5e0!3m2!1sen!2sin!4v1626102513034!5m2!1sen!2sin"
-                    width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy">
-                </iframe> </ul>
+              
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6358.382536334864!2d73.9424355645799!3d18.560442929839724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2eaf737cac4bf%3A0x8d3a62fb6544af92!2sTECHNOARTZ!5e0!3m2!1sen!2sin!4v1728293500976!5m2!1sen!2sin"
+                 width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            
+            </ul>
 
                 <!--Map Outer-
         <div class="map-outer">
@@ -486,7 +488,9 @@
     <script src="js/script.js"></script>
 
     <!--Google Map APi Key-->
+   
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBKS14AnP3HCIVlUpPKtGp7CbYuMtcXE2o"></script>
+   
     <script src="js/map-script.js"></script>
     <!--End Google Map APi-->
 
