--- a/job_opportunity.html
+++ b/job_opportunity.html
@@ -234,6 +234,68 @@
                         </div>
                     </div>
 
+                    <div class="news-block col-md-3 col-sm-6 col-xs-12">
+                        <div class="inner-box">
+                            <div class="image">
+                                <img src="images/resource/news-1.jpg" alt="" />
+                            </div>
+                            <div class="lower-content">
+                                <div class="upper">
+                                    <h3><a href="#">Course 1</a></h3>
+                                </div>
+                                <div class="more">
+                                    <a href="/digital-marketing.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
+                                        More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="news-block col-md-3 col-sm-6 col-xs-12">
+                        <div class="inner-box">
+                            <div class="image">
+                                <img src="images/resource/news-1.jpg" alt="" />
+                            </div>
+                            <div class="lower-content">
+                                <div class="upper">
+                                    <h3><a href="#">Course 2</a></h3>
+                                </div>
+                                <div class="more">
+                                    <a href="/digital-marketing.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
+                                        More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="news-block col-md-3 col-sm-6 col-xs-12">
+                        <div class="inner-box">
+                            <div class="image">
+                                <img src="images/resource/news-1.jpg" alt="" />
+                            </div>
+                            <div class="lower-content">
+                                <div class="upper">
+                                    <h3><a href="#">Course 3</a></h3>
+                                </div>
+                                <div class="more">
+                                    <a href="/digital-marketing.html" class="read-more"><span
+                                            class="fa fa-chevron-circle-right"></span> Read
+                                        More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
                 </div>
             </div>
         </section>
