--- a/python-developerjob.html
+++ b/python-developerjob.html
@@ -198,27 +198,16 @@
                             <!--Blog Category Widget-->
                             <div class="sidebar-widget sidebar-blog-category">
                                 <ul class="blog-cat-two">
-                                    <li><a>HTML</a></li>
-                                    <li><a>CSS</a></li>
-                                    <li><a>Bootstrap</a></li>
-                                    <li><a>Javascript</a></li>
+                                    <li><a>Data Analysis and Visualization</a></li>
+                                    <li><a>Machine Learning and AI</a></li>
+                                    <li><a>Scripting and Automation:</a></li>
+                                    <li><a>Web Scraping</a></li>
                                     <!-- <li><a href="#"></a></li>
                                     <li><a href="#"></a></li> -->
                                 </ul>
                             </div>
 
-                            <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
-
-                            <!-- Sidebar brochure-->
+                          
                             <div class="sidebar-widget testimonial-widget">
                                 <div class="sidebar-title">
                                     <h2>Testimonials</h2>
@@ -229,14 +218,16 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Poonam Gore </h3>
+                                                    <div class="location">Pune </div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">
+                                                As a Python Developer, I find my work fulfilling, as it leverages my skills in building robust backend systems. This role offers opportunities to innovate and optimize processes, boosting my passion for coding and refining my problem-solving skills.
+
+                                            </div>
                                         </div>
                                     </div>
 
@@ -245,14 +236,14 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Komal Kokare </h3>
+                                                    <div class="location"> Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">
+                                                Working as a Python Developer is highly rewarding, allowing me to apply my skills in building scalable backend solutions and complex applications. It offers opportunities to explore new technologies, optimize systems, and enhance my problem-solving and logical thinking...</div>
                                         </div>
                                     </div>
 
@@ -261,16 +252,56 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
                                                     </div>
-                                                    <h3>Teena Venanda</h3>
-                                                    <div class="location">Newyork City</div>
+                                                    <h3>Aparna Magar</h3>
+                                                    <div class="location">Pune </div>
                                                 </div>
                                             </div>
-                                            <div class="text">Must explain too you how mistaken idea denoncing sed
-                                                pleasure & praising pain was and we will give all actual human.</div>
+                                            <div class="text">Being a Python Developer is highly satisfying as it allows me to leverage my skills in building robust backend systems and dynamic applications. This role enables continuous learning, fosters innovation, and strengthens my problem-solving and analytical abilities.
+
+
+
+
+
+
+                                                .</div>
                                         </div>
                                     </div>
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                    </div>
+                                                    <h3>Diksha Daphal </h3>
+                                                    <div class="location">Pune </div>
+                                                </div>
+                                            </div>
+                                            <div class="text">
+                                                As a Python Developer, my work is highly rewarding, enabling me to apply my skills in creating strong backend systems and efficient applications. This role allows me to innovate and optimize processes, deepening my passion for coding and enhancing my analytical abilities.</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="slide">
+                                        <div class="inner-widget">
+                                            <div class="upper-box">
+                                                <div class="upper-inner">
+                                                    <div class="image">
+                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                    </div>
+                                                    <h3>Kavita Randive  </h3>
+                                                    <div class="location">Pune </div>
+                                                </div>
+                                            </div>
+                                            <div class="text">As a Python Developer, I find my role deeply satisfying, utilizing my skills to create strong backend systems and efficient applications. This position allows me to innovate and enhance processes, fueling my passion for coding and sharpening my analytical and problem-solving skills.</div>
+                                        </div>
+                                    </div>
+
+
+
                                 </div>
                             </div>
 
